--- a/src/app.css
+++ b/src/app.css
@@ -48,7 +48,10 @@ textarea {
     }
 
     .btn-primary-black {
-        @apply inline-flex items-center gap-2 rounded-md border-2 border-[#171515] bg-[#171515] px-3 py-2 text-sm font-medium text-white transition-colors hover:bg-transparent hover:text-[#171515] focus:outline-none focus:ring active:opacity-75;
+        @apply inline-flex items-center gap-2 rounded-md border-2 border-[#171515] bg-[#171515] px-3 py-2 text-sm font-medium text-white transition-colors 
+        hover:bg-transparent hover:text-[#171515] 
+        focus:outline-none focus:ring active:opacity-75 
+        focus:bg-[#171515] focus:text-white;
     }
     
     .btn-primary-black:disabled {
