--- a/src/app.css
+++ b/src/app.css
@@ -92,6 +92,7 @@ textarea {
     font-style: normal;
     font-weight: 500;
     src: url('/fonts/ELNATH.ttf');
+    font-display: swap;
 }
 
 @font-face {
@@ -99,6 +100,7 @@ textarea {
     font-style: normal;
     font-weight: 500;
     src: url('/fonts/Helgoland.otf');
+    font-display: swap;
 }
 
 @font-face {
@@ -106,6 +108,7 @@ textarea {
     font-style: normal;
     font-weight: 500;
     src: url('/fonts/CloisterBlack.ttf');
+    font-display: swap;
 }
 
 @font-face {
@@ -113,7 +116,9 @@ textarea {
     font-style: normal;
     font-weight: 500;
     src: url('/fonts/LinLibertine_R.ttf');
+    font-display: swap;
 }
+
 
 body {
     font-family: 'Libertine';
