--- a/src/app.css
+++ b/src/app.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 body {
-  /* transition: background-color 0.1s ease-in-out; */
-  @apply bg-white dark:bg-slate-800 text-black dark:text-white;
+    /* transition: background-color 0.1s ease-in-out; */
+    @apply bg-white dark:bg-slate-800 text-black dark:text-white;
 }
 
 input {
@@ -12,8 +12,7 @@ input {
 }
 
 input[type="radio"] {
-    @apply text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 
-    dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-slate-600 dark:border-slate-500
+    @apply text-blue-600 bg-gray-100 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-slate-600 dark:border-slate-500
 }
 
 select {
@@ -31,6 +30,7 @@ textarea {
 .btn-primary-black {
     @apply dark:bg-[#005773] dark:border-[#00607f] dark:hover:bg-[#00759a] dark:text-white
 }
+
 .btn-primary-black:disabled {
     @apply dark:border-[#545250] dark:bg-[#545250]
 }
@@ -89,7 +89,7 @@ textarea {
     }
 
     .btn-group {
-        @apply inline-flex -space-x-px overflow-hidden rounded-md border  shadow-sm;
+        @apply inline-flex -space-x-px overflow-hidden rounded-md border shadow-sm;
     }
 
     .text-error {
@@ -101,12 +101,17 @@ textarea {
     }
 
     .btn-primary-black {
-        @apply inline-flex items-center gap-2 rounded-md border-2 border-[#171515] bg-[#171515] px-3 py-2 text-sm font-medium text-white transition-colors 
-        hover:bg-transparent hover:text-[#171515] 
-        focus:outline-none focus:ring active:opacity-75 
-        focus:bg-[#171515] focus:text-white;
+        @apply inline-flex items-center gap-2 rounded-md border-2 border-[#171515] bg-[#171515] px-3 py-2 text-sm font-medium text-white transition-colors hover:bg-transparent hover:text-[#171515] focus:outline-none focus:ring active:opacity-75 focus:bg-[#171515] focus:text-white;
     }
-    
+
+    .btn-generic {
+        @apply px-4 py-1 border rounded-md hover:bg-gray-50 dark:bg-slate-700 dark:border-slate-600 dark:hover:bg-slate-600 dark:text-white
+    }
+
+    .btn-generic-icon {
+        @apply px-2 py-2 border rounded-md hover:bg-gray-50 dark:bg-slate-700 dark:border-slate-600 dark:hover:bg-slate-600 dark:text-white
+    }
+
     .btn-primary-black:disabled {
         @apply cursor-not-allowed inline-flex items-center gap-2 rounded-md border-2 border-[#545250] bg-[#545250] px-3 py-2 text-sm font-medium text-white focus:outline-none focus:ring active:opacity-75;
     }
@@ -153,11 +158,17 @@ body {
     font-family: 'Libertine';
 }
 
-p, a, label, input, span {
+p,
+a,
+label,
+input,
+span {
     font-size: 1.25rem;
 }
 
-button, input, select {
+button,
+input,
+select {
     font-size: 1.2rem !important;
 }
 
