--- a/src/app.css
+++ b/src/app.css
@@ -93,6 +93,10 @@
         @apply text-gray-600 dark:text-slate-400
     }
 
+    .default-border {
+        @apply border rounded-md dark:border-slate-700 border-gray-200
+    }
+
 }
 
 @layer components {
@@ -135,11 +139,6 @@
     .item-border {
         @apply rounded-md dark:bg-slate-700 dark:border-slate-600 border hover:border-gray-300 dark:hover:border-slate-500
     }
-
-    .default-border {
-        @apply border rounded-md dark:border-slate-700
-    }
-
 
 }
 
