--- a/src/app.css
+++ b/src/app.css
@@ -124,8 +124,20 @@
         @apply dark:bg-[#006B8C] dark:border-[#006B8C] dark:hover:border-[#00a4d9] dark:text-white dark:hover:text-white dark:hover:bg-[#006B8C] dark:focus:text-white dark:focus:bg-[#006B8C] dark:focus:border-[#00a4d9];
     }
 
+    .btn-secondary-black {
+        @apply rounded-md border-2 border-[#171515] hover:border-gray-600 hover:text-gray-600 bg-transparent px-3 py-2 text-sm font-medium transition-colors hover:bg-transparent text-[#171515] focus:outline-none focus:ring active:opacity-75;
+    }
+
+    .btn-secondary-black {
+        @apply dark:bg-transparent dark:border-[#006B8C] dark:hover:border-[#00a4d9] dark:text-white dark:hover:text-white dark:hover:bg-[#006B8C] dark:focus:text-white dark:focus:bg-[#006B8C] dark:focus:border-[#00a4d9];
+    }
+
     .btn-generic {
         @apply px-4 py-1 border rounded-md hover:bg-gray-50 dark:bg-slate-700 dark:border-slate-600 dark:hover:bg-slate-600 dark:text-white
+    }
+
+    .btn-generic:disabled {
+        @apply cursor-not-allowed bg-gray-50 text-gray-600
     }
 
     .btn-generic-icon {
