--- a/src/app.css
+++ b/src/app.css
@@ -57,6 +57,10 @@
         @apply text-blue-600 checked:border-0 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-slate-600 dark:border-slate-500 !important;
     }
 
+    input[type="checkbox"] {
+        @apply text-blue-600 checked:border-0 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-slate-600 dark:border-slate-500 !important;
+    }
+
     select {
         @apply dark:border-slate-800 dark:bg-slate-700 dark:text-white dark:focus:border-slate-700
     }
