--- a/src/app.css
+++ b/src/app.css
@@ -119,7 +119,7 @@
 
 @layer components {
     .btn-group-btn {
-        @apply inline-block px-4 py-2 text-sm font-medium text-gray-700 hover:bg-gray-50 focus:relative;
+        @apply inline-block px-4 py-2 text-sm font-medium text-gray-700 dark:text-gray-100 hover:bg-gray-50 focus:relative;
     }
 
     .btn-group {
