--- a/src/app.css
+++ b/src/app.css
@@ -2,219 +2,209 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
 .autocomplete::after {
-    @apply border-black dark:border-gray-200 !important
+  @apply border-black dark:border-gray-200 !important;
 }
 
 .autocomplete {
-    min-width: auto !important;
+  min-width: auto !important;
 }
 
 .autocomplete,
-.autocomplete>.input-container {
-    @apply dark:bg-slate-700 dark:border-slate-600 rounded-md !important;
+.autocomplete > .input-container {
+  @apply dark:bg-slate-700 dark:border-slate-600 rounded-md !important;
 }
 
 .autocomplete-list {
-    @apply dark:bg-slate-600 dark:border-slate-600 !important
+  @apply dark:bg-slate-600 dark:border-slate-600 !important;
 }
 
 .autocomplete-list-item {
-    @apply dark:text-gray-100 !important
+  @apply dark:text-gray-100 !important;
 }
 
 @layer base {
-
-   
-    /* @media (scripting: none) {
+  /* @media (scripting: none) {
         :root {
             @apply bg-slate-800;
         }
     } */
 
+  body {
+    /* transition: background-color 0.1s ease-in-out; */
+    @apply dark:bg-slate-800 text-black dark:text-white;
+  }
 
-    body {
-        /* transition: background-color 0.1s ease-in-out; */
-        @apply dark:bg-slate-800 text-black dark:text-white
-    }
+  input {
+    @apply dark:border-slate-800 dark:focus:border-blue-800 dark:bg-slate-700 dark:text-white;
+  }
 
-    input {
-        @apply dark:border-slate-800 dark:focus:border-blue-800 dark:bg-slate-700 dark:text-white;
-    }
+  [type="text"],
+  input:where(:not([type])),
+  [type="email"],
+  [type="url"],
+  [type="password"],
+  [type="number"],
+  [type="date"],
+  [type="datetime-local"],
+  [type="month"],
+  [type="search"],
+  [type="tel"],
+  [type="time"],
+  [type="week"],
+  [multiple],
+  textarea,
+  select {
+    @apply dark:border-slate-800 dark:focus:border-blue-800 dark:bg-slate-700 dark:text-white;
+  }
 
-    [type="text"],
-    input:where(:not([type])),
-    [type="email"],
-    [type="url"],
-    [type="password"],
-    [type="number"],
-    [type="date"],
-    [type="datetime-local"],
-    [type="month"],
-    [type="search"],
-    [type="tel"],
-    [type="time"],
-    [type="week"],
-    [multiple],
-    textarea,
-    select {
-        @apply dark:border-slate-800 dark:focus:border-blue-800 dark:bg-slate-700 dark:text-white;
-    }
+  input[type="radio"] {
+    @apply text-blue-600 checked:border-0 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-slate-600 dark:border-slate-500 !important;
+  }
 
-    input[type="radio"] {
-        @apply text-blue-600 checked:border-0 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-slate-600 dark:border-slate-500 !important;
-    }
+  input[type="checkbox"] {
+    @apply text-blue-600 checked:border-0 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-slate-600 dark:border-slate-500 !important;
+  }
 
-    input[type="checkbox"] {
-        @apply text-blue-600 checked:border-0 border-gray-300 focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 focus:ring-2 dark:bg-slate-600 dark:border-slate-500 !important;
-    }
+  select {
+    @apply dark:border-slate-800 dark:bg-slate-700 dark:text-white dark:focus:border-slate-700;
+  }
 
-    select {
-        @apply dark:border-slate-800 dark:bg-slate-700 dark:text-white dark:focus:border-slate-700
-    }
-
-    textarea {
-        @apply dark:border-slate-800 dark:bg-slate-700 dark:text-white dark:focus:border-slate-700
-    }
-
+  textarea {
+    @apply dark:border-slate-800 dark:bg-slate-700 dark:text-white dark:focus:border-slate-700;
+  }
 }
 
 @layer utilities {
-    .animate-drop-click {
-        @apply transition ease-in translate-y-[0.1rem] duration-75
-    }
+  .animate-drop-click {
+    @apply transition ease-in translate-y-[0.1rem] duration-75;
+  }
 
-    .animate-drop-hover {
-        @apply transition ease-in translate-y-[0.05rem] duration-75
-    }
+  .animate-drop-hover {
+    @apply transition ease-in translate-y-[0.05rem] duration-75;
+  }
 
-    .input-error {
-        @apply dark:border-red-600;
-    }
+  .input-error {
+    @apply dark:border-red-600;
+  }
 
-    .text-error {
-        @apply dark:text-red-500;
-    }
+  .text-error {
+    @apply dark:text-red-500;
+  }
 
-    .input-error {
-        border-color: red;
-    }
+  .input-error {
+    border-color: red;
+  }
 
+  .underline-hover {
+    @apply dark:before:bg-slate-300 before:bg-black relative font-medium before:absolute before:-bottom-1 before:h-0.5 before:w-full before:scale-x-0 before:transition hover:before:scale-x-100;
+  }
 
-    .underline-hover {
-        @apply dark:before:bg-slate-300 before:bg-black relative font-medium before:absolute before:-bottom-1 before:h-0.5 before:w-full before:scale-x-0 before:transition hover:before:scale-x-100;
-    }
+  .attribute-stats p {
+    @apply text-gray-600 dark:text-slate-400;
+  }
 
-    .attribute-stats p {
-        @apply text-gray-600 dark:text-slate-400
-    }
-
-    .default-border {
-        @apply border rounded-md dark:border-slate-600 border-gray-200
-    }
-
+  .default-border {
+    @apply border rounded-md dark:border-slate-600 border-gray-200;
+  }
 }
 
 @layer components {
-    .btn-group-btn {
-        @apply inline-block px-4 py-2 text-sm font-medium text-gray-700 dark:text-gray-100 hover:bg-gray-50 focus:relative;
-    }
+  .btn-group-btn {
+    @apply inline-block px-4 py-2 text-sm font-medium text-gray-700 dark:text-gray-100 hover:bg-gray-50 focus:relative;
+  }
 
-    .btn-group {
-        @apply inline-flex -space-x-px overflow-hidden rounded-md border shadow-sm;
-    }
+  .btn-group {
+    @apply inline-flex -space-x-px overflow-hidden rounded-md border shadow-sm;
+  }
 
-    .text-error {
-        @apply text-[0.8rem] text-[#FF0000];
-    }
+  .text-error {
+    @apply text-[0.8rem] text-[#FF0000];
+  }
 
-    .input {
-        @apply border-gray-200 dark:border-slate-800 rounded-md sm:text-sm w-full;
-    }
+  .input {
+    @apply border-gray-200 dark:border-slate-800 rounded-md sm:text-sm w-full;
+  }
 
-    .btn-primary-black {
-        @apply inline-flex items-center gap-2 rounded-md border-2 border-[#171515] bg-[#171515] px-3 py-2 text-sm font-medium text-white transition-colors hover:bg-transparent hover:text-[#171515] focus:outline-none focus:ring active:opacity-75 focus:bg-[#171515] focus:text-white;
-    }
+  .btn-primary-black {
+    @apply inline-flex items-center gap-2 rounded-md border-2 border-[#171515] bg-[#171515] px-3 py-2 text-sm font-medium text-white transition-colors hover:bg-transparent hover:text-[#171515] focus:outline-none focus:ring active:opacity-75 focus:bg-[#171515] focus:text-white;
+  }
 
-    .btn-primary-black {
-        @apply dark:bg-[#006B8C] dark:border-[#006B8C] dark:hover:border-[#00a4d9] dark:text-white dark:hover:text-white dark:hover:bg-[#006B8C] dark:focus:text-white dark:focus:bg-[#006B8C] dark:focus:border-[#00a4d9];
-    }
+  .btn-primary-black {
+    @apply dark:bg-[#006B8C] dark:border-[#006B8C] dark:hover:border-[#00a4d9] dark:text-white dark:hover:text-white dark:hover:bg-[#006B8C] dark:focus:text-white dark:focus:bg-[#006B8C] dark:focus:border-[#00a4d9];
+  }
 
-    .btn-secondary-black {
-        @apply rounded-md border-2 border-[#171515] hover:border-gray-600 hover:text-gray-600 bg-transparent px-3 py-2 text-sm font-medium transition-colors hover:bg-transparent text-[#171515] focus:outline-none focus:ring active:opacity-75;
-    }
+  .btn-secondary-black {
+    @apply rounded-md border-2 border-[#171515] hover:border-gray-600 hover:text-gray-600 bg-transparent px-3 py-2 text-sm font-medium transition-colors hover:bg-transparent text-[#171515] focus:outline-none focus:ring active:opacity-75;
+  }
 
-    .btn-secondary-black {
-        @apply dark:bg-transparent dark:border-[#006B8C] dark:hover:border-[#00a4d9] dark:text-white dark:hover:text-white dark:hover:bg-[#006B8C] dark:focus:text-white dark:focus:bg-[#006B8C] dark:focus:border-[#00a4d9];
-    }
+  .btn-secondary-black {
+    @apply dark:bg-transparent dark:border-[#006B8C] dark:hover:border-[#00a4d9] dark:text-white dark:hover:text-white dark:hover:bg-[#006B8C] dark:focus:text-white dark:focus:bg-[#006B8C] dark:focus:border-[#00a4d9];
+  }
 
-    .btn-generic {
-        @apply px-4 py-1 border rounded-md hover:bg-gray-50 dark:bg-slate-700 dark:border-slate-600 dark:hover:bg-slate-600 dark:text-white
-    }
+  .btn-generic {
+    @apply px-4 py-1 border rounded-md hover:bg-gray-50 dark:bg-slate-700 dark:border-slate-600 dark:hover:bg-slate-600 dark:text-white;
+  }
 
-    .btn-generic:disabled {
-        @apply cursor-not-allowed bg-gray-50 text-gray-600 dark:bg-slate-700 dark:text-gray-500
-    }
+  .btn-generic:disabled {
+    @apply cursor-not-allowed bg-gray-50 text-gray-600 dark:bg-slate-700 dark:text-gray-500;
+  }
 
-    .btn-generic-color-2 {
-        @apply dark:bg-slate-600 dark:border-slate-500 dark:hover:bg-slate-500 dark:hover:border-slate-500
-    }
+  .btn-generic-color-2 {
+    @apply dark:bg-slate-600 dark:border-slate-500 dark:hover:bg-slate-500 dark:hover:border-slate-500;
+  }
 
-    .btn-generic-color-2:disabled {
-        @apply dark:text-gray-400 dark:bg-slate-700 dark:border-slate-600 dark:hover:bg-slate-700 dark:hover:border-slate-600
-    }
+  .btn-generic-color-2:disabled {
+    @apply dark:text-gray-400 dark:bg-slate-700 dark:border-slate-600 dark:hover:bg-slate-700 dark:hover:border-slate-600;
+  }
 
-    .btn-generic-icon {
-        @apply px-2 py-2 border rounded-md hover:bg-gray-50 dark:bg-slate-700 dark:border-slate-600 dark:hover:bg-slate-600 dark:text-white
-    }
+  .btn-generic-icon {
+    @apply px-2 py-2 border rounded-md hover:bg-gray-50 dark:bg-slate-700 dark:border-slate-600 dark:hover:bg-slate-600 dark:text-white;
+  }
 
-    .btn-primary-black:disabled {
-        @apply cursor-not-allowed inline-flex items-center gap-2 rounded-md border-2 border-[#545250] bg-[#545250] px-3 py-2 text-sm font-medium text-white focus:outline-none focus:ring active:opacity-75;
-    }
+  .btn-primary-black:disabled {
+    @apply cursor-not-allowed inline-flex items-center gap-2 rounded-md border-2 border-[#545250] bg-[#545250] px-3 py-2 text-sm font-medium text-white focus:outline-none focus:ring active:opacity-75;
+  }
 
-    .item-border {
-        @apply rounded-md dark:bg-slate-700 dark:border-slate-600 border hover:border-gray-300 dark:hover:border-slate-500
-    }
-
+  .item-border {
+    @apply rounded-md dark:bg-slate-700 dark:border-slate-600 border hover:border-gray-300 dark:hover:border-slate-500;
+  }
 }
 
 @font-face {
-    font-family: 'Elnath';
-    font-style: normal;
-    font-weight: 500;
-    src: url('/fonts/ELNATH.ttf');
-    font-display: swap;
+  font-family: "Elnath";
+  font-style: normal;
+  font-weight: 500;
+  src: url("/fonts/ELNATH.ttf");
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Helgoland';
-    font-style: normal;
-    font-weight: 500;
-    src: url('/fonts/Helgoland.otf');
-    font-display: swap;
+  font-family: "Helgoland";
+  font-style: normal;
+  font-weight: 500;
+  src: url("/fonts/Helgoland.otf");
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Cloister';
-    font-style: normal;
-    font-weight: 500;
-    src: url('/fonts/CloisterBlack.ttf');
-    font-display: swap;
+  font-family: "Cloister";
+  font-style: normal;
+  font-weight: 500;
+  src: url("/fonts/CloisterBlack.ttf");
+  font-display: swap;
 }
 
 @font-face {
-    font-family: 'Libertine';
-    font-style: normal;
-    font-weight: 500;
-    src: url('/fonts/LinLibertine_R.ttf');
-    font-display: swap;
+  font-family: "Libertine";
+  font-style: normal;
+  font-weight: 500;
+  src: url("/fonts/LinLibertine_R.ttf");
+  font-display: swap;
 }
-
 
 body {
-    font-family: 'Libertine';
+  font-family: "Libertine";
 }
 
 p,
@@ -222,30 +212,19 @@ a,
 label,
 input,
 span {
-    font-size: 1.25rem;
+  font-size: 1.25rem;
 }
 
 button,
 input,
 select {
-    font-size: 1.2rem !important;
+  font-size: 1.2rem !important;
 }
 
 .toaster {
-    font-family: ui-sans-serif,
-        system-ui,
-        -apple-system,
-        BlinkMacSystemFont,
-        Segoe UI,
-        Roboto,
-        Helvetica Neue,
-        Arial,
-        Noto Sans,
-        sans-serif,
-        "Apple Color Emoji",
-        "Segoe UI Emoji",
-        Segoe UI Symbol,
-        "Noto Color Emoji";
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", Segoe UI Symbol, "Noto Color Emoji";
 
-    font-weight: 500;
+  font-weight: 500;
 }
