--- a/src/app.css
+++ b/src/app.css
@@ -93,7 +93,7 @@
   }
 
   .text-error {
-    @apply text-[0.8rem] text-[#FF0000] dark:text-red-500;
+    @apply text-[1rem] text-[#FF0000] dark:text-red-500;
   }
 
 
@@ -158,6 +158,14 @@
     @apply dark:bg-transparent dark:border-[#006B8C] dark:hover:border-[#00a4d9] dark:text-white dark:hover:text-white dark:hover:bg-[#006B8C] dark:focus:text-white dark:focus:bg-[#006B8C] dark:focus:border-[#00a4d9];
   }
 
+  .btn-submit {
+    @apply px-4 py-2 border border-blue-700 bg-blue-700 rounded-md
+    font-bold uppercase text-white
+    hover:bg-transparent hover:text-black
+    dark:hover:bg-blue-600 dark:hover:text-white
+    transition-colors;
+  }
+
   .btn-generic {
     @apply px-4 py-1 border rounded-md hover:bg-gray-50 dark:bg-slate-700 dark:border-slate-600 dark:hover:bg-slate-600 dark:text-white;
   }
@@ -166,6 +174,11 @@
     @apply cursor-not-allowed bg-gray-50 text-gray-600 dark:bg-slate-700 dark:text-gray-500;
   }
 
+  .btn-delete {
+    @apply hover:bg-red-200 focus:relative bg-red-100 text-red-600
+            dark:bg-red-500 dark:border-red-500 dark:hover:bg-red-400 dark:hover:border-red-400
+            dark:text-red-200;
+  }
 
   .generic-border {
     @apply border rounded-md  dark:border-slate-600 dark:text-white;
