--- a/src/app.css
+++ b/src/app.css
@@ -100,6 +100,15 @@
     @apply text-gray-500 dark:text-slate-400;
   }
 
+  .text-secondary-hover {
+    @apply text-gray-600 dark:text-slate-300;
+  }
+
+  .text-secondary-2 {
+    @apply text-gray-600 dark:text-slate-300;
+  }
+
+
   .text-warning {
     @apply dark:text-yellow-300 text-orange-500;
   }
