--- a/src/app.css
+++ b/src/app.css
@@ -132,6 +132,14 @@
     @apply border rounded-md dark:border-slate-600 border-gray-200;
   }
 
+  .bg-default {
+    @apply bg-gray-100 dark:bg-slate-700;
+  }
+
+  .bg-default-2 {
+    @apply bg-gray-100 dark:bg-slate-600;
+  }
+
   .center-screen {
     position: absolute;
     top: 50%;
@@ -217,6 +225,10 @@
 
   .item-border {
     @apply rounded-md dark:bg-slate-700 dark:border-slate-600 border hover:border-gray-300 dark:hover:border-slate-500;
+  }
+
+  .item-border-no-hover {
+    @apply rounded-md dark:bg-slate-700 dark:border-slate-600 border;
   }
 }
 
