--- a/src/app.css
+++ b/src/app.css
@@ -162,7 +162,7 @@
   }
 
   .input {
-    @apply border-gray-200 dark:border-slate-800 rounded-md sm:text-sm w-full;
+    @apply border-gray-200 dark:border-slate-700 rounded-md sm:text-sm w-full;
   }
 
   .btn-primary-black {
@@ -229,6 +229,10 @@
 
   .item-border-no-hover {
     @apply rounded-md dark:bg-slate-700 dark:border-slate-600 border;
+  }
+
+  .dropdown-item-button {
+    @apply w-full flex items-center gap-3 p-4 sm:p-2 hover:bg-gray-200 dark:hover:bg-slate-600 dark:hover:sm:bg-gray-600 dark:hover:text-white rounded-md;
   }
 }
 
